# git-ct

./: .gitignore  Cargo.toml  README.md  commit-templates.default.toml  commit-templates.toml
.github/workflows/: release.yml
npm/: README.md  binary.js  package-lock.json  package.json
src/: main.rs
