[package]
name = "git-ct"
version = "0.0.16"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.6", features = ["derive"] }
colorize = "0.1.0"
env_logger = "0.9.0"
inquire = "0.1.0"
log = "0.4.17"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
temp-file = "0.1.7"
toml = "0.5.9"
unicode-segmentation = "1.9.0"
